[workspace]

members = ["lib/buildr_store", "buildr", "test/*/*"]

[workspace.dependencies]

# Basics =====
async-std = { version = "1.12" }
futures = { version = "0.3.21" }
simple-error = { version = "0.3.1" }
time = { version = "0.3.36" }

# Filesystem notifications ======
crossbeam-channel = { version = "0.5.5" }
notify = { version = "6.1.1" }
# ====== Filesystem notifications

# Apache Arrow ===
# Used by Duckdb example also
arrow = { version = "52.2.0" }
# === Apache Arrow

# CLI ============
clap = { version = "4.1.5", features = ["derive", "env"] }
# ============ CLI

# SERDE ==========
serde = { version = "1.0.137", features = ["derive"] }
# JSON
serde_json = { version = "1.0.81" }
# YAML
serde_yaml = { version = "0.9" }
# ========== SERDE

signal-hook = { version = "0.3.14" }
tempfile = { version = "3" }

# Logging / Tracing ==========
tera = { version = "1.16" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
# ========== Logging / Tracing


# DuckDB =====================
duckdb = { version = "1.0.0", features = ["bundled"] }
# ===================== DuckDB
