[package]
name = "buildr-store"
version = "0.1.0"
edition = "2021"


# RocksDB =====================
rocksdb = { version = "0.22" }
# ===================== RocksDB

# GRPC ========================
# https://www.swiftdiaries.com/rust/tonic/
tonic = { version = "0.12.1", features = ["tls"] }
tonic-reflection = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
prost = { version = "0.13.1" }
prost-types = { version = "0.13.1" }
chrono = { version = "0.4.31", default-features = false }
tower = "0.4.13"
# ======================== GRPC

[build-dependencies]

# GRPC
tonic-build = { version = "0.12.1" }
